--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -107,6 +107,9 @@
                 android:layout_weight="50"
                 android:padding="5dp"
                 android:paddingStart="16dp"
+                android:elevation="2dp"
+                android:translationZ="2dp"
+                android:stateListAnimator="@null"
                 android:text="@string/password_recovery" />
         </LinearLayout>
     </LinearLayout>
