--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,11 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
 
+    <color name="facebook">#0084ff</color>
+    <color name="twitter">#55acee</color>
+    <color name="github">#171515</color>
+    <color name="google">#dd4b39</color>
+
     <color name="black_overlay">#66000000</color>
 
     <color name="texto_normal">#5C6BC0</color>
