--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,7 +33,6 @@
     </style>
 
     <style name="BotonAction" parent="android:Widget.Material.Button">
-        <item name="backgroundTint">@color/colorPrimaryDark</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:background">@drawable/rounded_corners</item>
     </style>
@@ -43,7 +42,7 @@
         <item name="android:layout_marginEnd">16dp</item>
         <item name="android:paddingTop">8dp</item>
         <item name="android:paddingBottom">8dp</item>
-        <item name="android:background">@drawable/rounded_corners</item>
+        <item name="android:tint">@android:color/white</item>
     </style>
 
 </resources>
