--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,6 +48,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
                 android:padding="5dp"
+                style="@style/BotonNoBack"
                 android:paddingStart="16dp"
                 android:textColor="@color/texto_rojo"
                 android:text="@string/register_btn" />
@@ -107,10 +108,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
                 android:padding="5dp"
+                android:textColor="@color/black_overlay"
+                style="@style/BotonNoBack"
                 android:paddingStart="16dp"
-                android:elevation="2dp"
-                android:translationZ="2dp"
-                android:stateListAnimator="@null"
                 android:text="@string/password_recovery" />
         </LinearLayout>
     </LinearLayout>
