--- a/app/src/main/res/layout/frg_home.xml
+++ b/app/src/main/res/layout/frg_home.xml
@@ -5,6 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".main.HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -21,23 +22,27 @@
 
     <Button
         android:id="@+id/frg_home_action_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="177dp"
+        android:layout_height="70dp"
         android:layout_marginStart="192dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/nine_patch"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.446"
+        app:layout_constraintHorizontal_bias="0.952"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toTopOf="@+id/textView3" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/frg_home_container"
-        android:layout_width="388dp"
-        android:layout_height="480dp"
+        android:layout_width="377dp"
+        android:layout_height="219dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.478"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frg_home_action_btn" />
+        app:layout_constraintTop_toBottomOf="@+id/frg_home_action_btn"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
