--- a/app/src/main/res/layout/frg_home.xml
+++ b/app/src/main/res/layout/frg_home.xml
@@ -20,29 +20,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/frg_home_action_btn"
-        android:layout_width="177dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="192dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/nine_patch"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.952"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toTopOf="@+id/textView3" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/frg_home_container"
-        android:layout_width="377dp"
-        android:layout_height="219dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="361dp"
+        android:layout_height="645dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.478"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frg_home_action_btn"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
