--- a/app/src/main/res/layout/act_persona_detalle.xml
+++ b/app/src/main/res/layout/act_persona_detalle.xml
@@ -9,6 +9,7 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:orientation="horizontal"
         android:padding="8dp"
         android:weightSum="100"
@@ -34,7 +35,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textColor="#000000" />
 
             <TextView
                 android:id="@+id/act_persona_detalle_lastname_txt"
