--- a/app/src/main/res/layout/act_persona_detalle.xml
+++ b/app/src/main/res/layout/act_persona_detalle.xml
@@ -18,8 +18,8 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="0dp"
+            android:id="@+id/act_persona_detalle_image"
+            android:layout_width="50dp"
             android:layout_height="250dp"
             android:layout_weight="50"
             app:srcCompat="@drawable/ic_usuario" />
