--- a/app/src/main/res/layout/frg_settings.xml
+++ b/app/src/main/res/layout/frg_settings.xml
@@ -73,7 +73,7 @@
                 android:text="@string/change_password_btn_label" />
 
             <Button
-                android:id="@+id/button6"
+                android:id="@+id/frg_settings_legal_btn"
                 style="@style/BotonNoBack"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
