--- a/app/src/main/res/layout/dialog_change_pass.xml
+++ b/app/src/main/res/layout/dialog_change_pass.xml
@@ -2,12 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/change_pass_title" />
+        android:text="@string/change_pass_title"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,19 +19,14 @@
         android:orientation="horizontal"
         android:weightSum="100">
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="50"
-            android:text="@string/change_pass_edt_lbl" />
-
         <EditText
             android:id="@+id/dialog_change_pass_pass_edt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="50"
+            android:layout_weight="100"
             android:ems="10"
+            android:hint="@string/change_pass_edt_lbl"
+            android:imeOptions="actionNext"
             android:inputType="textPassword" />
     </LinearLayout>
 
@@ -37,19 +36,14 @@
         android:orientation="horizontal"
         android:weightSum="100">
 
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="50"
-            android:text="@string/change_pass_confirm_edt_lbl" />
-
         <EditText
             android:id="@+id/dialog_change_pass_confirm_edt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="50"
+            android:layout_weight="100"
             android:ems="10"
+            android:hint="@string/change_pass_confirm_edt_lbl"
+            android:imeOptions="actionSend"
             android:inputType="textPassword" />
     </LinearLayout>
 
